tests/coverage/misc/fail/negative/numeric_literals/003_separator_double.js
// Expected error: invalid repeated numeric separator.
const value = 1__0;
